plugins {
    id 'java'
    id 'application'
}

group = 'com.ecl'
version = '1.0.0'

def osName = System.getProperty('os.name').toLowerCase()
def javafxPlatform = osName.contains('win') ? 'win' : (osName.contains('mac') ? 'mac' : 'linux')

repositories {
    maven { url = uri('https://maven.aliyun.com/repository/public') }
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.slf4j:slf4j-api:2.0.16'
    runtimeOnly 'ch.qos.logback:logback-classic:1.5.16'
    implementation "org.openjfx:javafx-base:21:${javafxPlatform}"
    implementation "org.openjfx:javafx-graphics:21:${javafxPlatform}"
    implementation "org.openjfx:javafx-controls:21:${javafxPlatform}"
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

def normalizeForDelete = { File dir ->
    if (dir.exists()) {
        ant.attrib(file: dir, readonly: false)
        ant.attrib(readonly: false) {
            fileset(dir: dir)
        }
    }
}

tasks.named('clean') {
    doFirst {
        if (buildDir.exists()) {
            normalizeForDelete(buildDir)
            buildDir.eachFileRecurse { file ->
                file.setWritable(true, false)
            }
            buildDir.setWritable(true, false)
        }
    }
}

application {
    mainClass = 'com.ecl.ECL'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.ecl.ECL'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('packageWindowsApp', Exec) {
    dependsOn installDist
    group = 'distribution'
    description = 'Build a Windows app image with ECL.exe.'
    onlyIf {
        System.getProperty('os.name').toLowerCase().contains('win')
    }

    def outputDir = file('dist/windows')
    def iconFile = file('src/main/resources/icons/ecl-icon.ico')
    def jpackageExe = file("${System.getProperty('java.home')}/bin/jpackage.exe")

    doFirst {
        normalizeForDelete(outputDir)
        delete outputDir
        outputDir.mkdirs()
    }

    commandLine jpackageExe,
            '--type', 'app-image',
            '--name', 'ECL',
            '--app-version', project.version.toString(),
            '--vendor', 'ECL',
            '--dest', outputDir,
            '--input', file("$buildDir/install/ECL/lib"),
            '--main-jar', tasks.named('jar').get().archiveFileName.get(),
            '--main-class', 'com.ecl.ECL',
            '--icon', iconFile,
            '--java-options', '-Dfile.encoding=UTF-8'
}
